Fix horizontal scroll by restoring overflow-x on body
Create WhatsApp button via JS and append to documentElement to bypass
the iOS Safari overflow-x/position:fixed bug.

--- a/css/general.css
+++ b/css/general.css
@@ -80,6 +80,9 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  /* Only works if there is nothing absolutely positioned in relation to body */
+  overflow-x: hidden;
 }
 
 /**************************/
